[gd_scene load_steps=5 format=3 uid="uid://c7ym8xwm3ykn5s"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1"]
[ext_resource type="Script" path="res://scripts/PlayerBike.gd" id="2"]
[ext_resource type="Script" path="res://scripts/Track.gd" id="3"]
[ext_resource type="Script" path="res://scripts/AIBike.gd" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(4000, 100)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(40, 60)

[node name="Game" type="Node2D"]
script = ExtResource("1")

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(512, 550)
script = ExtResource("3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("1")

[node name="ColorRect" type="ColorRect" parent="Ground"]
offset_left = -2000.0
offset_top = -50.0
offset_right = 2000.0
offset_bottom = 50.0
color = Color(0.4, 0.3, 0.2, 1)

[node name="PlayerBike" type="CharacterBody2D" parent="."]
position = Vector2(200, 450)
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBike"]
shape = SubResource("2")

[node name="ColorRect" type="ColorRect" parent="PlayerBike"]
offset_left = -20.0
offset_top = -30.0
offset_right = 20.0
offset_bottom = 30.0
color = Color(0, 0.6, 1, 1)

[node name="Camera2D" type="Camera2D" parent="PlayerBike"]
enabled = true
position_smoothing_enabled = true
position_smoothing_speed = 7.5

[node name="AIBike" type="CharacterBody2D" parent="."]
position = Vector2(150, 450)
script = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AIBike"]
shape = SubResource("2")

[node name="ColorRect" type="ColorRect" parent="AIBike"]
offset_left = -20.0
offset_top = -30.0
offset_right = 20.0
offset_bottom = 30.0
color = Color(1, 0.4, 0.3, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeedLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
text = "Speed: 0 km/h"

[node name="StaminaBar" type="ProgressBar" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 220.0
offset_bottom = 80.0
max_value = 100.0
value = 100.0

[node name="DistanceLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 260.0
offset_bottom = 125.0
text = "Distance: 0 / 0"

[node name="ScoreLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 300.0
offset_top = 20.0
offset_right = 460.0
offset_bottom = 50.0
text = "Score: 0"

[node name="TimeLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 140.0
offset_right = 180.0
offset_bottom = 165.0
text = "Time: 0.0"

[node name="LeaderLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 300.0
offset_top = 60.0
offset_right = 500.0
offset_bottom = 85.0
text = "Leader: Player"

[node name="Instructions" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Arrow Keys: Move | Space: Jump | ESC: Menu | Enter: Restart when prompted"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -30.0
offset_right = 280.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
visible = false

